@@ -30,11 +30,22 @@ DHCP6_MSG_TYPE=2
 DHCP6_TRANS_ID=0x123
 DHCP6_OP_NUM=1
 
+DHCP6_OP_CODE=15
+DHCP6_OP_LEN=13
+DHCP6_OPTION=DHCP6_USER_CLASS
+DHCP6_OP_USR_CLS_NUM=3
+DHCP6_OP_USR_CLS_LEN=2
+DHCP6_OP_USR_CLS_DATA=0XABCD
+DHCP6_OP_USR_CLS_LEN=4
+DHCP6_OP_USR_CLS_DATA=0X12345678
+DHCP6_OP_USR_CLS_LEN=1
+DHCP6_OP_USR_CLS_DATA=0XEF
+
+/*
 DHCP6_OP_CODE=14
 DHCP6_OP_LEN=0
 DHCP6_OPTION=DHCP6_RAPID_COMMIT
 
-/*
 DHCP6_OP_CODE=13
 DHCP6_OP_LEN=12
 DHCP6_OPTION=DHCP6_STATUS_CODE
