@@ -25,4 +25,5 @@ pgen-0.01----------------------------------------------------------------------
 	-> IATA Option added
 	-> Status Code Option added
 	-> Rapid Commit Option added
+	-> User Class option added
 pgen-0.02----------------------------------------------------------------------
